Fixed tooltip overflow

--- a/src/hexx-raid/css/bundle.scss
+++ b/src/hexx-raid/css/bundle.scss
@@ -454,7 +454,6 @@ nav {
       text-align: left;
       top: -7px;
       visibility: hidden;
-      white-space: nowrap;
       z-index: 1;
 
       .icon {
